# DfsxDoc

./: OpenGL_note.txt  myTxt.java  tet.txt
bainji/trunk/: CMakeLists.txt  README.txt  build_note.txt  config.cmake  config.qmake  configure  xedit.i
bainji/trunk/doc/: XEdit设计.EAP  工程demo.xeproj
bainji/trunk/include/: GSize.h  IBuffer.h  IDeserializable.h  IInputStream.h  IObservable.h  IObserver.h  IOutputStream.h  IRenderer.h  ISerializable.h  IXmlDeserializable.h  IXmlSerializable.h  TArray.h
bainji/trunk/include/xengine/: EncodeParam.h  GenerateSetting.h  IAction.h  IClip.h  IGenerateObserver.h  IImagePreview.h  IMedia.h  IPreview.h  IProject.h  ITimeLine.h  ITimeLineObserver.h  ITrack.h  ITrackClipInfo.h  IVideoStreamPreview.h  IXEngine.h  PreviewFrame.h
bainji/trunk/include/xutil/: IDictionary.h  Image.h  InputFileStream.h  NumberConvertor.h  OutputFileStream.h  RationalSerialize.h  StdUtil.h  id.h  libxmlEx.h
bainji/trunk/script/: buildAll.sh  buildAndroid.sh  buildIos.sh  buildWindows.sh  generateJniCode.sh  pub.cmake  pub.sh
bainji/trunk/src/xengine/: CMakeLists.txt  xengine.i
bainji/trunk/src/xengine/include/: IInnerAction.h  IInnerClip.h  IInnerMedia.h  IInnerPreview.h  IInnerProject.h  IInnerTrack.h  NLEHeader.h
bainji/trunk/src/xengine/src/: DsVideoBuffer.cpp  DsVideoBuffer.h  IInnerClip.cpp  IInnerMedia.cpp  IXEngine.cpp  ImageSerialize.cpp  ImageSerialize.h  NLEHelper.cpp  NLEHelper.h  Preview.cpp  Preview.h  PreviewFrameSerialize.cpp  (+13 more)
bainji/trunk/src/xutil/: CMakeLists.txt  xutil.i
bainji/trunk/third-part/: README.txt
bainji/trunk/toolchain/: iOS.cmake
bainji/trunk/ui/: 非编效果图地址.txt
(+1042 files in other folders)
